--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --require test/setup.js",
-    "start": "node src/practice.js",
+    "start": "node src/blogfulnpm.js",
     "predeploy": "npm audit",
     "deploy": "git push heroku master"
   },
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "knex": "^0.20.3",
+    "mocha": "^6.2.2",
     "morgan": "^1.9.1",
     "pg": "^7.14.0"
   }
